@startuml chatbot_erd
!theme plain
title Chatbot - ERD
skinparam backgroundColor #FFFFFF
skinparam linetype ortho

entity "users" as users {
  * id : INT <<PK>>
  --
  * email : VARCHAR(120) <<UK>>
  full_name : VARCHAR(150)
  avatar_url : VARCHAR(500)
  google_id : VARCHAR(100) <<UK>>
  role : ENUM(student, teacher, admin)
  is_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

entity "refresh_tokens" as refresh_tokens {
  * id : INT <<PK>>
  --
  * token : VARCHAR(512) <<UK>>
  * user_id : INT <<FK>>
  expires_at : DATETIME
  is_revoked : BOOLEAN
  created_at : DATETIME
}

entity "courses" as courses {
  * id : INT <<PK>>
  --
  * code : VARCHAR(20) <<UK>>
  name : VARCHAR(200)
  description : TEXT
  semester : VARCHAR(20)
  is_active : BOOLEAN
  created_at : DATETIME
}

entity "enrollments" as enrollments {
  * id : INT <<PK>>
  --
  * user_id : INT <<FK>>
  * course_id : INT <<FK>>
  role : ENUM(student, teacher)
  enrolled_at : DATETIME
}

entity "documents" as documents {
  * id : INT <<PK>>
  --
  * course_id : INT <<FK>>
  uploaded_by : INT <<FK>>
  filename : VARCHAR(255)
  file_path : TEXT
  file_type : ENUM(...)
  file_size : INT
  status : ENUM(PENDING, PROCESSING, READY, FAILED)
  progress : INT
  total_chunks : INT
  processing_time_ms : INT
  embedding_model : VARCHAR(100)
  metadata_json : JSON
  created_at : DATETIME
}

entity "document_chunks" as document_chunks {
  * id : INT <<PK>>
  --
  * document_id : INT <<FK>>
  chunk_index : INT
  content : TEXT
  page_number : INT
  heading : VARCHAR(200)
  metadata_json : JSON
  created_at : DATETIME
}

entity "conversations" as conversations {
  * id : INT <<PK>>
  --
  * user_id : INT <<FK>>
  * course_id : INT <<FK>>
  title : VARCHAR(200)
  created_at : DATETIME
  updated_at : DATETIME
}

entity "messages" as messages {
  * id : INT <<PK>>
  --
  * conversation_id : INT <<FK>>
  role : ENUM(user, assistant, system)
  content : TEXT
  tokens_used : INT
  model_used : VARCHAR(50)
  trace_id : VARCHAR(12)
  total_time_ms : INT
  retrieval_fallback : INT
  agent_metadata : JSON
  created_at : DATETIME
}

entity "citations" as citations {
  * id : INT <<PK>>
  --
  * message_id : INT <<FK>>
  chunk_id : INT <<FK>>
  relevance_score : FLOAT
  quote : TEXT
}

entity "conversation_summaries" as conversation_summaries {
  * id : INT <<PK>>
  --
  * conversation_id : INT <<FK>>
  version : INT
  summary_text : TEXT
  message_count : INT
  parent_version : INT
  created_at : DATETIME
}

entity "conversation_summary_metadata" as conversation_summary_metadata {
  * conversation_id : INT <<PK,FK>>
  --
  latest_version : INT
  last_summarized_message_count : INT
  updated_at : DATETIME
}

entity "exam_schedules" as exam_schedules {
  * id : INT <<PK>>
  --
  * course_id : INT <<FK>>
  exam_type : ENUM(midterm, final, quiz, practical)
  exam_date : DATETIME
  duration_minutes : INT
  location : VARCHAR(200)
  notes : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "generated_quizzes" as generated_quizzes {
  * id : INT <<PK>>
  --
  * course_id : INT <<FK>>
  * user_id : INT <<FK>>
  title : VARCHAR(200)
  questions : JSON
  source_chunks : JSON
  is_ai_generated : INT
  created_at : DATETIME
}

entity "quiz_attempts" as quiz_attempts {
  * id : INT <<PK>>
  --
  * quiz_id : INT <<FK>>
  * user_id : INT <<FK>>
  answers : JSON
  score : INT
  total_questions : INT
  time_spent_seconds : INT
  started_at : DATETIME
  completed_at : DATETIME
  created_at : DATETIME
}

entity "notifications" as notifications {
  * id : INT <<PK>>
  --
  * user_id : INT <<FK>>
  type : VARCHAR(30)
  title : VARCHAR(200)
  message : VARCHAR(500)
  is_read : BOOLEAN
  related_type : VARCHAR(30)
  related_id : INT
  created_at : DATETIME
}

entity "system_settings" as system_settings {
  * id : INT <<PK>>
  --
  config_json : TEXT
}

users ||--o{ refresh_tokens
users ||--o{ enrollments
courses ||--o{ enrollments

courses ||--o{ documents
users ||--o{ documents : uploaded_by
documents ||--o{ document_chunks

users ||--o{ conversations
courses ||--o{ conversations
conversations ||--o{ messages
messages ||--o{ citations
document_chunks ||--o{ citations

conversations ||--o{ conversation_summaries
conversations ||--|| conversation_summary_metadata

courses ||--o{ exam_schedules
courses ||--o{ generated_quizzes
users ||--o{ generated_quizzes
generated_quizzes ||--o{ quiz_attempts
users ||--o{ quiz_attempts

users ||--o{ notifications

note bottom
Lưu ý:
- CSDL quan hệ là MySQL
- Embedding vector không nằm trong MySQL
- ChromaDB lưu vector của document chunks và rolling summaries
- Khóa liên kết giữa MySQL và ChromaDB chủ yếu là document_chunks.id
end note

@enduml
